Added item type icon and placeholders for other types

--- a/demos/publish/index.html
+++ b/demos/publish/index.html
@@ -40,6 +40,8 @@
         <label for="164831217e154849a731573e1855cb1a">ROW Permit Public Comment (Web Map)</label> <br>
       <input type="checkbox" onclick="onCheckboxClicked()" name="6fc5992522d34f26b2210d17835eea21">
         <label for="6fc5992522d34f26b2210d17835eea21">ROW Permit Public Comment (Web Mapping Application)</label> <br>
+      <input type="checkbox" onclick="onCheckboxClicked()" name="3ee671cf05594744864afe6c368d4a1a">
+        <label for="3ee671cf05594744864afe6c368d4a1a">PointFilterableComments (Service Definition)</label> <br>
       <br>
       <button id="createBtn" onclick="createSolutionFcn()" disabled="disabled">Create solution</button>
     </div>
