Removed superfluous interface

--- a/demos/clone/index.html
+++ b/demos/clone/index.html
@@ -159,7 +159,7 @@
                       //progress.hide();
 
                       document.getElementById('createDisplay').innerHTML =
-                        '<ul class="solutionList"><li><a href="' + storymap.url + '" target="_blank">' +
+                        '<ul class="solutionList"><li><a href="' + storymap.item.url + '" target="_blank">' +
                         solutionStorymapTitle + '</a></li></ul><br>' +
                         demoCommon.createHierarchyDisplay(clonedSolution, clone.getItemHierarchy(clonedSolution),
                           true, orgSession.orgUrl + '/home/');
