Updated arcgis-rest-js version in demos

--- a/demos/publish/index.html
+++ b/demos/publish/index.html
@@ -42,6 +42,8 @@
         <label for="6fc5992522d34f26b2210d17835eea21">ROW Permit Public Comment (Web Mapping Application)</label> <br>
       <input type="checkbox" onclick="onCheckboxClicked()" name="3ee671cf05594744864afe6c368d4a1a">
         <label for="3ee671cf05594744864afe6c368d4a1a">PointFilterableComments (Service Definition)</label> <br>
+      <input type="checkbox" onclick="onCheckboxClicked()" name="435b1a7cb3a04885afba40c07a4f2fdf">
+        <label for="435b1a7cb3a04885afba40c07a4f2fdf">Climbing A Mountain (PNG)</label> <br>
       <br>
       <button id="createBtn" onclick="createSolutionFcn()" disabled="disabled">Create solution</button>
     </div>
@@ -97,13 +99,13 @@
       // for the benefit of arcgis-clone-js
       'tslib': '../demo_common/tslib',
       // for the benefit of called libraries that use arcgis-rest-auth
-      '@esri/arcgis-rest-auth': 'https://unpkg.com/@esri/arcgis-rest-auth@1.14.0/dist/umd/auth.umd',
+      '@esri/arcgis-rest-auth': 'https://unpkg.com/@esri/arcgis-rest-auth@1.14.3/dist/umd/auth.umd',
       '@esri/arcgis-rest-feature-service-admin':
-        'https://unpkg.com/@esri/arcgis-rest-feature-service-admin@1.14.0/dist/umd/feature-service-admin.umd',
-      '@esri/arcgis-rest-groups': 'https://unpkg.com/@esri/arcgis-rest-groups@1.14.0/dist/umd/groups.umd',
-      '@esri/arcgis-rest-items': 'https://unpkg.com/@esri/arcgis-rest-items@1.14.0/dist/umd/items.umd',
-      '@esri/arcgis-rest-request': 'https://unpkg.com/@esri/arcgis-rest-request@1.14.0/dist/umd/request.umd',
-      '@esri/arcgis-rest-sharing': 'https://unpkg.com/@esri/arcgis-rest-sharing@1.14.0/dist/umd/sharing.umd'
+        'https://unpkg.com/@esri/arcgis-rest-feature-service-admin@1.14.3/dist/umd/feature-service-admin.umd',
+      '@esri/arcgis-rest-groups': 'https://unpkg.com/@esri/arcgis-rest-groups@1.14.3/dist/umd/groups.umd',
+      '@esri/arcgis-rest-items': 'https://unpkg.com/@esri/arcgis-rest-items@1.14.3/dist/umd/items.umd',
+      '@esri/arcgis-rest-request': 'https://unpkg.com/@esri/arcgis-rest-request@1.14.3/dist/umd/request.umd',
+      '@esri/arcgis-rest-sharing': 'https://unpkg.com/@esri/arcgis-rest-sharing@1.14.3/dist/umd/sharing.umd'
     }
   });
   requirejs([
