--- a/demos/clone/index.html
+++ b/demos/clone/index.html
@@ -87,8 +87,7 @@
       'tslib': '../demo_common/tslib',
       // for the benefit of called libraries that use arcgis-rest-auth
       '@esri/arcgis-rest-auth': 'https://unpkg.com/@esri/arcgis-rest-auth@1.14.3/dist/umd/auth.umd',
-      '@esri/arcgis-rest-feature-service-admin':
-        'https://unpkg.com/@esri/arcgis-rest-feature-service-admin@1.14.3/dist/umd/feature-service-admin.umd',
+      '@esri/arcgis-rest-feature-service-admin': 'https://unpkg.com/@esri/arcgis-rest-feature-service-admin@1.14.3/dist/umd/feature-service-admin.umd',
       '@esri/arcgis-rest-groups': 'https://unpkg.com/@esri/arcgis-rest-groups@1.14.3/dist/umd/groups.umd',
       '@esri/arcgis-rest-items': 'https://unpkg.com/@esri/arcgis-rest-items@1.14.3/dist/umd/items.umd',
       '@esri/arcgis-rest-request': 'https://unpkg.com/@esri/arcgis-rest-request@1.14.3/dist/umd/request.umd',
@@ -96,7 +95,7 @@
     }
   });
   requirejs([
-    '../../dist/src/index',
+    '../../dist/tsumd/src/index',
     '../demo_common/common',
     '../demo_common/progress',
     '@esri/arcgis-rest-auth',
