--- a/demos/publish/index.html
+++ b/demos/publish/index.html
@@ -109,7 +109,7 @@
     }
   });
   requirejs([
-    '../../dist/src/index',
+    '../../dist/tsumd/src/index',
     '../demo_common/common',
     '@esri/arcgis-rest-auth',
     '@esri/arcgis-rest-items',
