--- a/demos/clone/index.html
+++ b/demos/clone/index.html
@@ -131,25 +131,25 @@
       //progress.show();
 
       // Prepare credentials for library
-      var orgSession = demoCommon.getRequestOptions('username', 'password');
+      var requestOptions = demoCommon.getRequestOptions('username', 'password');
 
       // Get the destination organization URL for creating links to source items
-      request.getPortal(null, orgSession)
+      request.getPortal(null, requestOptions)
       .then(
         portalResponse => {
-          orgSession.orgUrl = 'https://' + portalResponse.urlKey + '.' + portalResponse.customBaseUrl;
-          orgSession.portalUrl = 'https://' + portalResponse.portalHostname;
+          const orgUrl = 'https://' + portalResponse.urlKey + '.' + portalResponse.customBaseUrl;
+          const portalUrl = 'https://' + portalResponse.portalHostname;
           currentSolutionName = document.getElementById('solutionNameField').value || currentSolutionName;
 
           // Get the solution contents
           items.getItemData(currentSolutionId)
           .then(
             publishedSolution => {
-              clone.cloneSolution(publishedSolution.items, orgSession, currentSolutionName, null)
+              clone.cloneSolution(publishedSolution.items, requestOptions, orgUrl, portalUrl, currentSolutionName, null)
               .then(
                 clonedSolution => {
                   var solutionStorymapTitle = 'Storymap about your solution';
-                  clone.createSolutionStorymap(solutionStorymapTitle, clonedSolution, orgSession)
+                  clone.createSolutionStorymap(solutionStorymapTitle, clonedSolution, requestOptions)
                   .then(
                     storymap  => {
                       document.getElementById('solutionName').innerHTML = '"' + currentSolutionName + '"';
@@ -161,7 +161,7 @@
                         '<ul class="solutionList"><li><a href="' + storymap.item.url + '" target="_blank">' +
                         solutionStorymapTitle + '</a></li></ul><br>' +
                         demoCommon.createHierarchyDisplay(clonedSolution, clone.getItemHierarchy(clonedSolution),
-                          true, orgSession.orgUrl + '/home/');
+                          true, requestOptions.orgUrl + '/home/');
                     }
                   );
                 }
