Renamed JSON container item to `templates` to match Hub design

--- a/demos/clone/index.html
+++ b/demos/clone/index.html
@@ -145,7 +145,8 @@
           items.getItemData(currentSolutionId)
           .then(
             publishedSolution => {
-              clone.cloneSolution(publishedSolution.items, requestOptions, orgUrl, portalUrl, currentSolutionName, null)
+              clone.cloneSolution(publishedSolution.templates,
+                requestOptions, orgUrl, portalUrl, currentSolutionName, null)
               .then(
                 clonedSolution => {
                   var solutionStorymapTitle = 'Storymap about your solution';
