--- a/demos/publish/index.html
+++ b/demos/publish/index.html
@@ -197,8 +197,8 @@
             document.getElementById('detailsDisplay').innerHTML =
               demoCommon.createItemLinksDisplay(publishedSolutionId, orgUrl, portalUrl) +
               '<br>Published Solution item hierarchy:' +
-              demoCommon.createHierarchyDisplay(publishedSolution.items,
-                clone.getItemHierarchy(publishedSolution.items));
+              demoCommon.createHierarchyDisplay(publishedSolution.templates,
+                clone.getItemHierarchy(publishedSolution.templates));
           }
         );
       }, function (error) {
