Added findIndex polyfill to demos

--- a/demos/clone/index.html
+++ b/demos/clone/index.html
@@ -97,6 +97,7 @@
   requirejs([
     '../../dist/tsumd/src/index',
     '../demo_common/common',
+    '../demo_common/polyfills',
     '../demo_common/progress',
     '@esri/arcgis-rest-auth',
     '@esri/arcgis-rest-items',
