--- a/demos/publish/index.html
+++ b/demos/publish/index.html
@@ -111,7 +111,7 @@
   requirejs([
     '../../dist/tsumd/src/index',
     '../demo_common/common',
-    '@esri/arcgis-rest-auth',
+    '../demo_common/polyfills',
     '@esri/arcgis-rest-items',
     '@esri/arcgis-rest-request'
   ], function (
