--- a/demos/clone/index.html
+++ b/demos/clone/index.html
@@ -151,10 +151,11 @@
                   extent: null //???
                 },
                 organization: {
+                  orgUrl: orgUrl,
                   portalBaseUrl: portalUrl
                 }
               };
-              clone.cloneSolution(publishedSolution.templates, requestOptions, 
+              clone.cloneSolution(publishedSolution.templates, requestOptions,
                 settings, currentSolutionName, null)
               .then(
                 clonedSolution => {
