Switched to importing webpacks

--- a/demos/clone/index.html
+++ b/demos/clone/index.html
@@ -61,6 +61,14 @@
   </div>
 
   <script src="../demo_common/require_2.3.6.min.js"></script>
+  <script src="../../dist/adlib.js"></script>
+  <script src="../../dist/arcgis-clone-js.js"></script>
+  <script src="../../dist/arcgis-rest-auth.js"></script>
+  <script src="../../dist/arcgis-rest-feature-service-admin.js"></script>
+  <script src="../../dist/arcgis-rest-groups.js"></script>
+  <script src="../../dist/arcgis-rest-items.js"></script>
+  <script src="../../dist/arcgis-rest-request.js"></script>
+  <script src="../../dist/arcgis-rest-sharing.js"></script>
   <script>
   var showSolutionFcn = cloneSolutionFcn = null;
   var currentSolutionId, currentSolutionName, currentSolutionItems;
@@ -80,36 +88,13 @@
     showSolutionFcn(currentSolutionId);
   }
 
-  requirejs.config({
-    baseUrl: './',
-    paths: {
-      // for the benefit of arcgis-clone-js
-      'tslib': '../demo_common/tslib',
-      'adlib': 'https://unpkg.com/adlib@3.0.0/dist/adlib.umd',
-      // for the benefit of called libraries that use arcgis-rest-auth
-      '@esri/arcgis-rest-auth': 'https://unpkg.com/@esri/arcgis-rest-auth@1.14.3/dist/umd/auth.umd',
-      '@esri/arcgis-rest-feature-service-admin': 'https://unpkg.com/@esri/arcgis-rest-feature-service-admin@1.14.3/dist/umd/feature-service-admin.umd',
-      '@esri/arcgis-rest-groups': 'https://unpkg.com/@esri/arcgis-rest-groups@1.14.3/dist/umd/groups.umd',
-      '@esri/arcgis-rest-items': 'https://unpkg.com/@esri/arcgis-rest-items@1.14.3/dist/umd/items.umd',
-      '@esri/arcgis-rest-request': 'https://unpkg.com/@esri/arcgis-rest-request@1.14.3/dist/umd/request.umd',
-      '@esri/arcgis-rest-sharing': 'https://unpkg.com/@esri/arcgis-rest-sharing@1.14.3/dist/umd/sharing.umd'
-    }
-  });
   requirejs([
-    '../../dist/tsumd/src/index',
     '../demo_common/common',
     '../demo_common/progress',
-    '@esri/arcgis-rest-auth',
-    '@esri/arcgis-rest-items',
-    '@esri/arcgis-rest-request',
     '../demo_common/polyfills'
   ], function (
-    clone,
     demoCommon,
-    progress,
-    auth,
-    items,
-    request
+    progress
   ) {
     showSolutionFcn = demoCommon.showPublishedSolutionHierarchy.bind(demoCommon);
     cloneSolutionFcn = cloneSolution;
@@ -136,7 +121,7 @@
       var requestOptions = demoCommon.getRequestOptions('username', 'password');
 
       // Get the destination organization URL for creating links to source items
-      request.getPortal(null, requestOptions)
+      arcgis_rest_request.getPortal(null, requestOptions)
       .then(
         portalResponse => {
           const settings = {
@@ -148,15 +133,15 @@
           currentSolutionName = document.getElementById('solutionNameField').value || currentSolutionName;
 
           // Get the solution contents
-          items.getItemData(currentSolutionId)
+          arcgis_rest_items.getItemData(currentSolutionId)
           .then(
             publishedSolution => {
-              clone.cloneSolution(publishedSolution.templates,
+              arcgis_clone_js.cloneSolution(publishedSolution.templates,
                 requestOptions, settings, currentSolutionName, null)
               .then(
                 clonedSolution => {
                   var solutionStorymapTitle = 'Storymap about your solution';
-                  clone.createSolutionStorymap(solutionStorymapTitle, clonedSolution, requestOptions,
+                  arcgis_clone_js.createSolutionStorymap(solutionStorymapTitle, clonedSolution, requestOptions,
                     settings.organization.orgUrl, null, "public")
                   .then(
                     storymap  => {
@@ -169,8 +154,8 @@
                         '<ul class="solutionList"><li><a href="' + storymap.item.url + '" target="_blank">' +
                         solutionStorymapTitle + '</a></li></ul><br>' +
                         demoCommon.createHierarchyDisplay(clonedSolution,
-                          clone.getItemHierarchy(clonedSolution),
-                          true, orgUrl + '/home/');
+                          arcgis_clone_js.getItemHierarchy(clonedSolution),
+                          true, settings.organization.orgUrl + '/home/');
                     }
                   );
                 }
